# exdft

./: README.md  pyproject.toml  run.sh
notebooks/: exdft01.ipynb
tests/: test_exdft.py
